# pmhc-agent

./: README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: Dockerfile  Dockerfile.mdanderson  README.md  job.mdanderson.gpu.yaml  modal_app.py  rayjob.mdanderson.yaml  rayjob.yaml
docs/: ARCHITECTURE-generalization.md  llm-brain-run.md
examples/: multi_target.py  run_antibody_mock.py  run_on_ray.py
pmhc_agent/: __init__.py  config.py  diagnostics.py  engine.py  execution.py  gates.py  interfaces.py  llm.py  memory.py  orchestrator.py  panel.py  run.py  types.py
pmhc_agent/domains/antibody/: domain.py  policy.py  target.py  tools.py  tools_real.py
pmhc_agent/domains/pmhc/: domain.py
pmhc_agent/service/: __init__.py  api.py
pmhc_agent/tools/: __init__.py  alphafold_real.py  backbones.py  base.py  folding.py  netmhc.py  proteinmpnn_real.py  rfdiffusion_real.py  sequences.py  specificity.py  structure.py
tests/: test_alphafold_real.py  test_antibody_domain.py  test_engine_pmhc.py  test_execution.py  test_llm_diagnoser.py  test_pipeline.py  test_proteinmpnn_cdr_real.py  test_proteinmpnn_real.py  test_rf2af3_real.py  test_rfantibody_real.py  test_rfdiffusion_real.py
tests/fixtures/: ab_af3_summary.json  ab_rf2.sc  af2_initial_guess.sc  pmhc_complex.fa
