[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pmhc-agent"
version = "0.1.0"
description = "Autonomous AI agent for designing high-specificity binders to peptide-MHC-I complexes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kun Hee Kim", email = "92kunheekim@users.noreply.github.com" }]
keywords = ["protein-design", "immunotherapy", "pMHC", "RFdiffusion", "agent"]
dependencies = []   # runs on the standard library alone (mock backends)

[project.optional-dependencies]
dev = ["pytest>=7"]
llm = ["anthropic>=0.39"]   # for the LLM-backed diagnoser (--brain llm)
ray = ["ray>=2.9"]          # for the RayExecutor (GPU fan-out on Kubernetes)
# Real backends (install as needed; not required for the mock demo):
# real = ["numpy", "torch", ...]  # + RFdiffusion / ProteinMPNN / AF2 / mhcflurry

[project.scripts]
pmhc-agent = "pmhc_agent.run:main"

[tool.setuptools.packages.find]
include = ["pmhc_agent*"]
